--- a/public/chat.html
+++ b/public/chat.html
@@ -38,6 +38,122 @@
       display: block;
       font-size: 1.2em;
     }
-    .timest
+    .timestamp {
+      font-size: 0.75em;
+      color: #aaa;
+      margin-left: 8px;
+    }
+    .username {
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
 
+  <div id="username-container">
+    <label class="username-label" for="username-input">Enter your username to join ChillFlix Chatroom</label>
+    <input id="username-input" autocomplete="off" placeholder="Your name" />
+    <button id="join-btn">Join Chat</button>
+  </div>
+
+  <div id="chat" style="display:none;">
+    <h2>💬 ChillFlix Chatroom</h2>
+    <ul id="messages"></ul>
+    <input id="m" autocomplete="off" placeholder="Type your message..." />
+    <button id="send">Send</button>
+  </div>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    const socket = io();
+
+    const usernameContainer = document.getElementById('username-container');
+    const usernameInput = document.getElementById('username-input');
+    const joinBtn = document.getElementById('join-btn');
+
+    const chat = document.getElementById('chat');
+    const messages = document.getElementById('messages');
+    const input = document.getElementById('m');
+    const sendBtn = document.getElementById('send');
+
+    let username = null;
+
+    function joinChat() {
+      const name = usernameInput.value.trim();
+      if (name) {
+        username = name;
+        socket.emit('set username', username);
+        usernameContainer.style.display = 'none';
+        chat.style.display = 'block';
+        input.focus();
+      }
+    }
+
+    joinBtn.addEventListener('click', joinChat);
+
+    usernameInput.addEventListener('keydown', (event) => {
+      if (event.key === 'Enter') {
+        event.preventDefault();
+        joinChat();
+      }
+    });
+
+    function sendMessage() {
+      const message = input.value.trim();
+      if (message !== '') {
+        socket.emit('chat message', message);
+        input.value = '';
+      }
+    }
+
+    sendBtn.addEventListener('click', sendMessage);
+
+    input.addEventListener('keydown', function(event) {
+      if (event.key === 'Enter' && !event.shiftKey) {
+        event.preventDefault();
+        sendMessage();
+      }
+      socket.emit('typing', input.value.length > 0);
+    });
+
+    socket.on('chat message', (data) => {
+      addMessage(data);
+    });
+
+    socket.on('typing', ({ username: typingUser, isTyping }) => {
+      showTypingIndicator(typingUser, isTyping);
+    });
+
+    function addMessage({ username, msg, color, timestamp }) {
+      const item = document.createElement('li');
+      item.classList.add('message');
+      item.innerHTML = `<span class="username" style="color:${color}">${username}</span> 
+                        <span class="timestamp">${timestamp}</span><br>${msg}`;
+      messages.appendChild(item);
+      messages.scrollTop = messages.scrollHeight;
+    }
+
+    let typingTimeout;
+    const typingDiv = document.createElement('div');
+    typingDiv.style.color = '#ccc';
+    typingDiv.style.fontStyle = 'italic';
+    typingDiv.style.marginTop = '10px';
+    chat.appendChild(typingDiv);
+
+    function showTypingIndicator(user, isTyping) {
+      if (!user || user === username) return;
+      if (isTyping) {
+        typingDiv.textContent = `${user} is typing...`;
+        clearTimeout(typingTimeout);
+        typingTimeout = setTimeout(() => {
+          typingDiv.textContent = '';
+        }, 3000);
+      } else {
+        typingDiv.textContent = '';
+      }
+    }
+  </script>
+
+</body>
+</html>
 
