--- a/public/chat.html
+++ b/public/chat.html
@@ -57,7 +57,7 @@
   </div>
 
   <div id="chat" style="display:none;">
-    <h2>💬 ChillFlix Chatroom</h2>
+    <h2><span style="font-size: 20px;">💬</span> ChillFlix Chatroom</h2>
     <ul id="messages"></ul>
     <input id="m" autocomplete="off" placeholder="Type your message..." />
     <button id="send">Send</button>
