--- a/public/chat.html
+++ b/public/chat.html
@@ -58,6 +58,7 @@
 
   <div id="chat" style="display:none;">
     <h2><span style="font-size: 20px;">💬</span> ChillFlix Chatroom</h2>
+<p id="online-count" style="color: #ccc; font-size: 14px; margin: 0 0 10px;"></p>
     <ul id="messages"></ul>
     <input id="m" autocomplete="off" placeholder="Type your message..." />
     <button id="send">Send</button>
