--- a/my-website/index.html
+++ b/my-website/index.html
@@ -17,6 +17,8 @@
   <script type="text/javascript" data-cfasync="false">
     (function(){var c=window,s="abd44046de39acd4542a19ad47275633",l=[["siteId",562-752+759-952+5203666],["minBid",0],["popundersPerIP","0"],["delayBetween",0],["default",false],["defaultPerDay",0],["topmostLayer","auto"]],p=["d3d3LmFudGlhZGJsb2Nrc3lzdGVtcy5jb20vbHlici9zL2ZhdHJhbWVudC5taW4uanM=","ZDNjb2Q4MHRobjdxbmQuY2xvdWRmcm9udC5uZXQvY3RldGhlci5taW4uanM="],j=-1,h,z,k=function(){clearTimeout(z);j++;if(p[j]&&!(1774198828000<(new Date).getTime()&&1<j)){h=c.document.createElement("script");h.type="text/javascript";h.async=!0;var n=c.document.getElementsByTagName("script")[0];h.src="https://"+atob(p[j]);h.crossOrigin="anonymous";h.onerror=k;h.onload=function(){clearTimeout(z);c[s.slice(0,16)+s.slice(0,16)]||k()};z=setTimeout(k,5E3);n.parentNode.insertBefore(h,n)}};if(!c[s]){try{Object.freeze(c[s]=l)}catch(e){}k()}})();
   </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6913363804744103"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
