--- a/my-website/index.html
+++ b/my-website/index.html
@@ -62,23 +62,6 @@
   }
 </style>
 
-<button onclick="toggleChatroom()" class="chat-toggle-btn">
-  💬 Open ChillFlix Chatroom
-</button>
-
-<div id="chatroom-container">
-  <iframe 
-    src="https://chillflix-axzx.onrender.com/chat.html">
-  </iframe>
-</div>
-
-<script>
-  function toggleChatroom() {
-    const chat = document.getElementById('chatroom-container');
-    chat.style.display = (chat.style.display === 'none' || chat.style.display === '') ? 'block' : 'none';
-  }
-</script>
-
   <!-- Navbar -->
   <header class="navbar" role="banner">
     <a href="index.html" class="logo" aria-label="ChillFlix Home">
@@ -232,6 +215,57 @@
     });
   </script>
 
+<style>
+  #chatroom-widget {
+    position: fixed;
+    bottom: 85px;
+    right: 16px;
+    z-index: 9999;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  #chatroom-toggle {
+    background: #e50914;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 16px;
+    font-weight: bold;
+    cursor: pointer;
+    margin-bottom: 8px;
+    font-size: 14px;
+  }
+
+  #chatroom-iframe {
+    display: none;
+    width: 320px;
+    height: 450px;
+    border: none;
+    border-radius: 12px;
+    box-shadow: 0 4px 16px rgba(0,0,0,0.4);
+  }
+
+  @media (max-width: 500px) {
+    #chatroom-iframe {
+      width: 90vw;
+      height: 60vh;
+    }
+  }
+</style>
+
+<div id="chatroom-widget">
+  <button id="chatroom-toggle" onclick="toggleChatWidget()">💬 Chat</button>
+  <iframe id="chatroom-iframe" src="https://chillflix-axzx.onrender.com/chat.html"></iframe>
+</div>
+
+<script>
+  function toggleChatWidget() {
+    const iframe = document.getElementById('chatroom-iframe');
+    iframe.style.display = iframe.style.display === 'none' || iframe.style.display === '' ? 'block' : 'none';
+  }
+</script>
 
 </body>
 </html>
