--- a/my-website/index.html
+++ b/my-website/index.html
@@ -63,21 +63,17 @@
 </style>
 
   <!-- Navbar -->
-  <header class="navbar" role="banner">
-    <a href="index.html" class="logo" aria-label="ChillFlix Home">
-      <img src="chillflix-logo.png" alt="ChillFlix Logo" width="100" height="40" />
-    </a>
-    <nav class="nav-links" role="navigation" aria-label="Main Navigation">
-      <a href="index.html" class="nav-link">Home</a>
-      <input
-        type="search"
-        class="search-bar"
-        placeholder="Search..."
-        aria-label="Search movies and shows"
-        onfocus="openSearchModal()"
-      />
+ <header class="header">
+  <div class="container">
+    <div class="logo">
+      <img src="chillflix-logo.png" alt="ChillFlix Logo">
+    </div>
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <input type="text" placeholder="Search..." class="search-input">
     </nav>
-  </header>
+  </div>
+</header>
 
   <!-- Banner -->
   <section class="banner" id="banner" role="region" aria-live="polite">
