--- a/my-website/index.html
+++ b/my-website/index.html
@@ -181,9 +181,9 @@
   </div>
 
   <!-- Floating Widget -->
-  <div id="floating-widget" style="position: fixed; bottom: 12px; right: 12px; background: linear-gradient(135deg, #e60000, #0055ff); color: white; border-radius: 8px; box-shadow: 0 1px 4px rgba(0,0,0,0.2); padding: 4px 8px; font-family: 'Segoe UI', sans-serif; z-index: 9999; width: 110px; font-size: 9px; line-height: 1.1; user-select: none; cursor: default;">
+<div id="floating-widget" style="position: fixed; bottom: 12px; right: 12px; background: #e50914; color: white; border-radius: 8px; box-shadow: 0 1px 4px rgba(0,0,0,0.2); padding: 4px 8px; font-family: 'Segoe UI', sans-serif; z-index: 9999; width: 110px; font-size: 9px; line-height: 1.1; user-select: none; cursor: default;">
   <div style="font-weight: bold; font-size: 10px; text-align: center; margin-bottom: 3px; white-space: nowrap;">
-    <span style="color: #0055ff;">Chill</span><span style="color: #e60000;">Flix</span> 🔥
+    ChillFlix 🔥
   </div>
   <div style="display: flex; align-items: center; margin-bottom: 1px;">
     <span style="margin-right: 3px;">👤</span>
