--- a/my-website/index.html
+++ b/my-website/index.html
@@ -170,11 +170,12 @@
 
 <script>
   const movies = [
-    {
-      title: "Inception",
-      description: "A thief who steals corporate secrets through dream-sharing technology.",
-      poster: "https://image.tmdb.org/t/p/original/qmDpIHrmpJINaRKAfWQfftjCdyi.jpg"
-    },
+  {
+    title: "Avengers: Endgame",
+    description: "The Avengers unite for a final battle against Thanos.",
+    poster: "https://image.tmdb.org/t/p/original/ulzhLuWrPK07P1YkdWQLZnQh1JL.jpg"
+  },
+
     {
       title: "The Dark Knight",
       description: "Batman faces the Joker in Gotham City.",
