--- a/my-website/index.html
+++ b/my-website/index.html
@@ -79,6 +79,14 @@
     </nav>
   </header>
 
+<!-- Responsive Banner with Movie Slideshow -->
+<section class="banner" id="banner" role="region" aria-live="polite" aria-label="Featured movies slideshow">
+  <div class="slideshow-container">
+    <img id="movie-poster" src="" alt="Movie Poster" />
+    <h1 id="banner-title"></h1>
+    <p id="banner-description"></p>
+  </div>
+</section>
 
 <style>
   .banner {
@@ -556,4 +564,3 @@
 
 </body>
 </html>
-
